# fine2

homework/: README.md
homework/1/: config-user-deploy.yml
homework/2/: config-certbot.yml  install-certbot.yml
homework/3/roles/install-postgres-exporter/: README.md
homework/3/roles/install-postgres-exporter/defaults/: main.yml
homework/3/roles/install-postgres-exporter/handlers/: main.yml
homework/3/roles/install-postgres-exporter/tasks/: main.yml
homework/3/roles/install-postgres-exporter/tests/: test.yml
homework/3/roles/install-postgres-exporter/vars/: main.yml
homework/3/roles/install-postgresql/: README.md
homework/3/roles/install-postgresql/defaults/: main.yml
homework/3/roles/install-postgresql/handlers/: main.yml
homework/4/: config-grafana-dashboards.yml  install-node-exporter.yml  install-prometheus.yml
homework/5/: build-from-dockerfile_devops-cource.yml  docker-compose.yml
homework/5/counter-backend/: .gitignore  Dockerfile.1  Dockerfile.2  Dockerfile.3  Makefile  README.md  pyproject.toml  sonar-project.properties
homework/5/counter-backend/deploy/: counter-backend  counter-backend.service  install.sh
homework/5/counter-backend/src/counter_backend/: __init__.py  main.py
homework/5/counter-backend/tests/: conftest.py  test_main.py
homework/6/: build-from-dockerfile_devops-cource.yml  counter-backend  docker-compose.yml
homework/6/nginx/: nginx.conf
homework/9/: .env  audit-svc  build-from-dockerfile_devops-cource.yml  config.yml  docker-compose.yml  install-nginx-prometheus-exporter.yml
homework/9/nginx/: nginx.conf
(+10 files in other folders)
