[tool.poetry]
name = "counter-backend"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{ include = "counter_backend", from = "src" }]

[tool.poetry.scripts]
server = "counter_backend.main:main"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.5"
pytest-aiohttp = "^1.0.5"
pytest-asyncio = "^0.21.1"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
isort = "^5.12.0"
pylint = "^3.0.2"
pylint-gitlab = "^2.0.0"
bandit = "^1.7.5"
pytest = "^7.4.3"

[tool.pytest.ini_options]
testpaths = ["tests"]
log_cli = true
log_cli_level = "INFO"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
